# Matricia

./: .gitignore  README.md  aug_matrix.py  matrix.py  point.py  pyproject.toml  utils.py  vector.py
matricia/: __init__.py  line.py  matrix.py  plane.py  point.py  vector.py
matricia/tools/: __init__.py
